# explorer_wrangler

./: Cargo.toml
client/: Cargo.toml
client/src/: get_taskbars.rs  main.rs  windows_taskbar.rs
client/src/module_bindings/: add_system_tray_entry_reducer.rs  add_system_tray_reducer.rs  add_taskbar_reducer.rs  config_table.rs  config_type.rs  mod.rs  set_taskbar_remote_reducer.rs  sync_taskbars_reducer.rs  system_tray_entry_table.rs  system_tray_entry_type.rs  system_tray_table.rs  system_tray_type.rs  taskbar_remote_kind_type.rs  taskbar_table.rs  taskbar_type.rs  update_taskbar_reducer.rs
crates/directx_fugue/: Cargo.toml
crates/directx_fugue/examples/: fugue.rs
crates/directx_fugue/shaders/: Activate-FXC.ps1  Compile-Shaders.ps1  triangle_ps.hlsl  triangle_vs.cso  triangle_vs.hlsl
crates/directx_fugue/src/: lib.rs
crates/window_tracker/: Cargo.toml
crates/window_tracker/examples/: main.rs  oop.rs  simple.rs
crates/window_tracker/src/: lib.rs  type_conversion.rs  window_tracker.rs
server/: Cargo.toml  Generate-Bindings.ps1  call-add_taskbar.ps1  call-set_taskbar_remote-fakedata.ps1  call-set_taskbar_remote-windows.ps1  describe.ps1  logs.ps1  publish.ps1
server/src/: add_system_tray.rs  add_system_tray_entry.rs  add_taskbar.rs  config.rs  get_config.rs  init.rs  lib.rs  set_taskbar_remote.rs  sync_taskbars.rs  system_tray.rs  system_tray_entry.rs  taskbar.rs  taskbar_remote_kind.rs  update_taskbar.rs
src/: main.rs
