[package]
name = "explorer_wrangler"
version = "0.1.0"
edition = "2024"
authors.workspace = true
repository.workspace = true

[dependencies]
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
] }
eyre = "0.6.12"
chrono = "0.4.40"
tracing = "0.1.41"
color-eyre = "0.6.3"
tracing-subscriber = "0.3.19"
window_tracker = { path = "crates/window_tracker" }


[workspace]
members = ["crates/*"]
package.authors = ["TeamDman"]
package.repository = "https://github.com/TeamDman/explorer_wrangler.git"
