[package]
name = "explorer_wrangler_client"
version = "0.1.0"
edition = "2021"

[dependencies]
spacetimedb-sdk = "1.0.0"
hex = "0.4"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_WNet",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_CallObj",
    "Win32_System_Com_ChannelCredentials",
    "Win32_System_Com_Events",
    "Win32_System_Com_Marshal",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com_UI",
    "Win32_System_Com_Urlmon",
    "Win32_System_Console",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
log = "0.4"
simple_logger = "4.3"
eyre = "0.6.12"
color-eyre = "0.6.3"
