[package]
name = "explorer_wrangler_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.0.0"
log = "0.4"
holda = "0.1.0"
eyre = "0.6.12"
# holda = { version = "0.1.0", features = ["serde"] }
# # serde = { version = "1.0.219", features = ["derive", "rc"] }
# # eyre = "0.6.12"
# # color-eyre = "0.6.3"